[gd_scene load_steps=2 format=3 uid="uid://cxk8q7dn3vymd"]

[ext_resource type="Script" path="res://scripts/difficulty_selection.gd" id="1_1"]

[node name="DifficultySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "✕"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShareButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "⤴"

[node name="PreviewSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/PreviewSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Level 1"
horizontal_alignment = 1

[node name="PreviewContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/PreviewSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="PreviewPanel" type="Panel" parent="MarginContainer/VBoxContainer/PreviewSection/PreviewContainer"]
custom_minimum_size = Vector2(850, 850)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PreviewSection/PreviewContainer/PreviewPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="PreviewImage" type="TextureRect" parent="MarginContainer/VBoxContainer/PreviewSection/PreviewContainer/PreviewPanel/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="DifficultyButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 700)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="EasyButton" type="Button" parent="MarginContainer/VBoxContainer/DifficultyButtons"]
custom_minimum_size = Vector2(850, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Play Easy ⭐"

[node name="NormalButton" type="Button" parent="MarginContainer/VBoxContainer/DifficultyButtons"]
custom_minimum_size = Vector2(850, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Play Normal ⭐⭐"

[node name="HardButton" type="Button" parent="MarginContainer/VBoxContainer/DifficultyButtons"]
custom_minimum_size = Vector2(850, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Play Hard ⭐⭐⭐"

[connection signal="pressed" from="MarginContainer/VBoxContainer/TopBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopBar/ShareButton" to="." method="_on_share_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DifficultyButtons/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DifficultyButtons/NormalButton" to="." method="_on_normal_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DifficultyButtons/HardButton" to="." method="_on_hard_button_pressed"]
